<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blacktor Toise</string>
    <string name="action_settings">Settings</string>
    <string name="title_select_local_device">Select Local device</string>
    <string name="title_select_device">Select Local or Remote device</string>
    <string name="title_main_menu">Main menu</string>
    <string name="title_server_mode">Server mode</string>

    <string name="title_input_socket_address">Input socket address</string>
    <string name="title_edit_socket_address">Edit socket address</string>

    <string name="notification_title_connected">Device connected.</string>

    <string name="label_select_device">Select devices</string>
    <string name="label_socket_addresses">Socket addresses</string>
    <string name="label_connected_controller">Connected controller</string>
    <string name="label_host_name">Host name</string>
    <string name="label_port">Port</string>

    <string name="btn_select">Select</string>
    <string name="btn_start">Start</string>
    <string name="btn_controller">Controller</string>
    <string name="btn_server_mode">Server mode</string>
    <string name="btn_send">Send</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_dummy">Dummy</string>

    <string name="msg_now_connecting">Now connecting</string>
    <string name="msg_echo">Echo</string>

    <string name="item_disconnect">Disconnect</string>
    <string name="item_dummy">Dummy</string>

</resources>